syntax = "proto3"; //指定版本信息
option go_package="./;pb";

message LoginRequest{
  string account = 1;
  string password = 2;
}

message LoginResponse{
  string userId  = 1;
  bool success = 2;
}

message HelloWorldRequest{
    string name = 1;
}

message HelloWorldResponse{
    string message = 1;
}